# diffingo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create_eclipse_project.sh
cmake/: cpp.cmake  settings.cmake
cmake/input/: Doxyfile.in  README.txt
cmake/toolchain/: MinGWCross.cmake
perfeval/: .gitignore  CMakeLists.txt  memcached_evaluator.cpp  memcached_evaluator.h
src/: .gitignore  CMakeLists.txt  main.cpp
src/examples/: http.dgo  http_simple.dgo  memcached.dgo  memcached_inst.dgo  memcached_simple.dgo
src/generation/: compiler.cpp  compiler.h  compiler_context.cpp  compiler_context.h  pass.cpp  pass.h
src/generation/output/: code_generator.cpp  code_generator.h  expression_translator.cpp  expression_translator.h  translator.cpp  translator.h  type_translator.cpp  type_translator.h
src/generation/parsing/: parser_generator.cpp  parser_generator.h
src/generation/preprocessing/: id_resolver.cpp  id_resolver.h  instantiation_dependency_resolver.cpp  instantiation_dependency_resolver.h  instantiation_type_generator.cpp  instantiation_type_generator.h  scope_builder.cpp  scope_builder.h  transform_resolver.cpp  transform_resolver.h  unit_scope_builder.cpp  unit_scope_builder.h
src/generation/serializing/: serializer_generator.cpp  serializer_generator.h
src/runtime/: runtime.h
src/runtime/parsing/: parse_result.h  parser_state.cpp  parser_state.h  parser_task.cpp  parser_task.h  util.cpp  util.h
src/runtime/serializing/: serialize_result.h  util.cpp  util.h
src/runtime/unit/: data_type.h  unit.h  unit_area.h
src/spec/ast/: attribute.cpp  attribute.h  exception.cpp  exception.h  function.cpp  function.h  id.cpp  id.h  location.cpp  location.h  module.cpp  module.h  node.cpp  node.h  node_types.h  scope.cpp  scope.h  transform.cpp  transform.h  visitor.h
src/spec/ast/constant/: bitset.cpp  bitset.h  bool.cpp  bool.h  constant.cpp  constant.h  double.cpp  double.h  enum.cpp  enum.h  integer.cpp  integer.h  none.cpp  none.h  string.cpp  string.h  tuple.cpp  tuple.h
src/spec/ast/ctor/: bytes.cpp  bytes.h  ctor.cpp  ctor.h  reg_exp.cpp  reg_exp.h
src/spec/ast/declaration/: constant.cpp  constant.h  declaration.cpp  declaration.h  function.cpp  function.h  transform.cpp  transform.h  type.cpp  type.h  unit_instantiation.cpp  unit_instantiation.h
src/spec/ast/expression/: assign.cpp  assign.h  conditional.cpp  conditional.h  constant.cpp  constant.h  ctor.cpp  ctor.h  expression.cpp  expression.h  find.cpp  find.h  function.cpp  function.h  id.cpp  id.h  lambda.cpp  lambda.h  list_comprehension.cpp  list_comprehension.h  member_attribute.cpp  member_attribute.h  operator.cpp  operator.h  parser_state.cpp  parser_state.h  transform.cpp  transform.h  type.cpp  type.h  variable.cpp  variable.h
src/spec/ast/type/: atomic_types.cpp  atomic_types.h  bitfield.cpp  bitfield.h  bitset.cpp  bitset.h  container.cpp  container.h  enum.cpp  enum.h  function.cpp  function.h  reg_exp.cpp  reg_exp.h  type.cpp  type.h  unit.cpp  unit.h
src/spec/ast/variable/: variable.cpp  variable.h
src/spec/parser/: driver.cpp  driver.h  parser.yy  scanner.h  scanner.ll
src/util/: util.cc  util.h
test/: .gitignore  CMakeLists.txt
test/dummy/: test_dummy.cpp
test/memcached/: test_memcached.cpp  test_memcached_compact.cpp
utils/travis/: after_success.sh  before_install.sh  install.sh
